sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {

debut=0; fin=lgr-2;
var échangé:Boolean=false;
do
{
	for(i<-debut to fin){
		if(plusPetit(i,i+1)){
			echange(i,i+1);
			échangé=true;
		}
		fin-=1;
	}
	for(i<-fin to debut by -1){
		if(!plusPetit(i,i+1)){
			echange(i,i+1);
			échangé=true;
		}
		debut += 1;
	}
}
while(!échangé)
}
